# HARMONI

./: .gitignore  LICENSE  MISTY-README.md  MULTIPC_REAME.md  README.md  TEST-docker-compose-harmoni-swarm.yml  Testing.rst  docker-compose-core.yml  docker-compose-dev.yml  docker-compose-full-db.yml  docker-compose-full.yml  docker-compose-hardware.yml  docker-compose-harmoni-dev.yml  docker-compose-harmoni-hardware.yml  docker-compose-harmoni-lightweight-multipc.yml  docker-compose-harmoni-lightweight.yml  docker-compose-harmoni-pc.yml  docker-compose-harmoni-qtrobot.yml  docker-compose-harmoni.yml  docker-compose-qt-nuc.yml  docker-compose-qt-pi.yml  docker-compose-ros-dev.yml  docker-compose.yml  docker-run-command.md  get_w2l_models.sh  installation.sh  requirements.txt  run_compose.sh  run_demo.sh  run_qt_nuc.sh  run_qt_pi.sh  run_tests.sh
cordial_behavior/: CMakeLists.txt  package.xml  setup.py
cordial_behavior/launch/: behaviors.launch
cordial_behavior/msg/: Behavior.msg
cordial_behavior/scripts/: behaviors.py
cordial_core/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
cordial_core/action/: Behavior.action  Player.action
cordial_core/scripts/: player.py
cordial_core/src/cordial_core/: robot_manager.py
cordial_detector/: CMakeLists.txt  package.xml  setup.py
cordial_detector/launch/: detector.launch
cordial_detector/scripts/: detector.py
cordial_dialogue/: CMakeLists.txt  package.xml  setup.py
cordial_dialogue/launch/: dialogue.launch
cordial_dialogue/scripts/: dialogue.py
cordial_example/: CMakeLists.txt  CoRDial_behaviors.json  README.txt  mainpage.dox  package.xml
cordial_example/launch/: otf_tts_setup.launch  run.launch  test_setup.launch
cordial_example/scripts/: robot_only.py  tablet_only.py
cordial_example/speech/: gen_audio.sh  script.txt
cordial_example/speech/data/: test.txt
cordial_face/: CMakeLists.txt  mainpage.dox  package.xml
cordial_face/launch/: face.launch  face_client.launch  server_for_browser_on_pi.launch
cordial_face/msg/: FaceKeyframeRequest.msg  FaceRequest.msg  Keyframe.msg  LookatRequest.msg
cordial_face/scripts/: client_to_start_face_on_pi.py  face_keyframe_server.py  face_lookat_server.py  server_to_start_face_on_pi.py  setup_http_servers.sh
cordial_face/web/: HOW_TO.txt  KiwiEditor.html  KiwiGL.html  KiwiLite.html  chili.html  chiliGL.html  index.html  kiwi.html
cordial_face/web/js/: face.js  facecontrol.js  newface.js  svgFace.js
cordial_face/web/libs/: meshLines.js
cordial_logger/: CMakeLists.txt  package.xml  setup.py
cordial_logger/launch/: logger.launch  rosbag_launcher.launch
cordial_logger/scripts/cordial_logger/: recorded_data.py
cordial_manager/: CMakeLists.txt  README.md  package.xml  setup.py
cordial_manager/action/: Cordial.action
cordial_manager/launch/: decision_manager.launch  interaction_manager.launch  modules.launch
cordial_manager/scripts/: decision_manager.py  interaction_manager.py
cordial_manager/scripts/data/: interactions.json  test.json
cordial_sound/: CMakeLists.txt  README  package.xml  setup.py  soundplay_node.launch  test.launch
cordial_sound/include/cordial_sound/: cordial_sound.h
cordial_sound/msg/: SoundRequest.msg
cordial_sound/scripts/: play.py  playbuiltin.py  say.py  shutup.py  soundplay_node.py  test.py
cordial_sound/src/cordial_sound/: libsoundplay.py
cordial_sound/src/sound_play/: libsoundplay.py
cordial_sound/test/: test.cpp
cordial_sprite/: CMakeLists.txt  mainpage.dox  package.xml
cordial_sprite/action/: KeyframePlayer.action
cordial_sprite/launch/: cordial_sprite.launch  movement.launch  one_robot_example.launch  robot_frames.launch
cordial_sprite/scripts/: MicroMaestro6Channel.py  dummy_robot_node.py  hexapod_ik.py  interpolation.py  sprite_control_node.py  sprite_cordial_node.py
cordial_tablet/: CMakeLists.txt  mainpage.dox  package.xml
cordial_tablet/launch/: websocket.launch
cordial_tablet/msg/: AddRemoveArea.msg  ChangeToken.msg  DispBanner.msg  TabletStatus.msg  TokenLocation.msg  TokenLocations.msg  TokenPose.msg  TokenPoses.msg
cordial_tablet/srv/: Setup.srv
cordial_tablet/web/: HOW_TO.txt  cordial_screen.html  index.html
cordial_tablet/web/js/: cordial_game.js  pixi.min.js.map
cordial_tts/: CMakeLists.txt  README.txt  mainpage.dox  package.xml  setup.py
cordial_tts/launch/: tts.launch
cordial_tts/scripts/: tts.py
cordial_tts/src/cordial_tts/: cordial_tts.py
harmoni_actuators/harmoni_hass/: CMakeLists.txt  How_to_create_a_HARMONI_package.md  README.md  package.xml  setup.py
harmoni_actuators/harmoni_hass/config/: configuration.yaml
harmoni_actuators/harmoni_hass/launch/: hass_service.launch
harmoni_actuators/harmoni_hass/src/: hass_service.py
harmoni_actuators/harmoni_hass/test/: hass.test  rostest_hass.py  unittest_hass.py
harmoni_actuators/harmoni_tts/: CMakeLists.txt  README.md  aws_tts_service.py  package.xml  requirements.txt  setup.py  setup_tts.sh
harmoni_actuators/harmoni_tts/config/: configuration.yaml  tts_local_configuration.yaml
harmoni_actuators/harmoni_tts/test/: mock_polly.test  (+9 more)
harmoni_actuators/harmoni_web/: CMakeLists.txt  README.md  package.xml  setup.py
harmoni_common_msgs/: CMakeLists.txt  package.xml
harmoni_common_msgs/action/: harmoni.action
harmoni_core/harmoni_common_lib/: CMakeLists.txt  README.md  package.xml
harmoni_decision/: CMakeLists.txt  package.xml  setup.py
harmoni_decision/config/: configuration.yaml
harmoni_decision/launch/: behavior_interface.launch  harmoni_router.launch  harmoni_service.launch  launcher.launch  placeholder.launch  routers.launch  services.launch  test.launch
harmoni_decision/scripts/: behavior_interface.py
harmoni_detectors/harmoni_face_detect/: CMakeLists.txt  README.md  facenet_install_notes.txt  package.xml
harmoni_stt/: CMakeLists.txt  Dockerfile-W2L-Inf-Ros-Dev  README.md  get_w2l_models.sh  package.xml
harmoni_stt/config/: configuration.yaml
harmoni_stt/launch/: microphone_service.launch  stt_example.launch  stt_service.launch
harmoni_stt/src/: py_test_inference.py  w2l_service.py
(+814 files in other folders)
