<package>
  <name>cordial_core</name>
  <version>0.1.2</version>
  <description>

     The core code for CoRDial, the Co-Robot Dialogue system.

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta</maintainer>
  <license>GPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>


	<build_depend>rospy</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>cordial_sound</build_depend>
	<build_depend>cordial_tts</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>cordial_face</build_depend>
</package>


