<package>
  <name>cordial_example</name>
  <version>0.1.2</version>
  <description>

    Examples using CoRDial.  Requires signing up for Ivona and adding your keys to the launchfile.

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta</maintainer>
  <license>GPL</license>

  <url></url>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>cordial_core</build_depend>
  <build_depend>cordial_tablet</build_depend>
  <build_depend>cordial_sound</build_depend>
  <build_depend>cordial_sprite</build_depend>
  <build_depend>tf</build_depend>
  
</package>


