<package>
  <name>cordial_face</name>
  <version>0.1.2</version>
  <description>

     Javascript face for the SPRITE robot.

  </description>
  <author>Elaine</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/cordial_face</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>


