<package>
  <name>cordial_manager</name>
  <version>0.1.2</version>
  <description>

     The core code for CoRDial, the Co-Robot Dialogue system.

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Micol Spitale</maintainer>
  <license>GPL</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


