<package>
  <name>cordial_sound</name>
  <version>0.1.2</version>version
  <description>
A modification of the sound_play node. sound_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
  </description>
  <author>Elaine Short, based on sound_play by Blaise Gassend, Austin Hendrix/ahendrix@willowgarage.com</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>diagnostics_msgs</build_depend>
  <build_depend>festival</build_depend>
  <build_depend>libgstreamer0.10-dev</build_depend>
  <build_depend>libgstreamer-plugins-base0.10-dev</build_depend>
  <build_depend>python-gst</build_depend>
  <build_depend>gstreamer0.10-plugins-ugly</build_depend>
  <build_depend>gstreamer0.10-plugins-good</build_depend>

  <export>
    <cpp cflags="-I${prefix}/include -I${prefix}/msg/cpp" />
  </export>
  <url>http://www.ros.org/wiki/sound_play</url>
</package>


