<package>
	<name>cordial_sprite</name>
	<version>0.1.2</version>
  <description>

     Code for running the SPRITE robot, including with CoRDial

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta </maintainer>
  <license>GPL</license>
  
  <url></url>
   <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cordial_core</build_depend>
  <build_depend>cordial_face</build_depend>

</package>


