<package>
	<name>cordial_tablet</name>
	<version>0.1.2</version>
  <description >

     Tablet game interface (javascript) for use with rosbridge_server and CoRDial.

  </description>
  <author>Elaine Short</author>
  <maintainer email="prmehta24@gmail.com">Parimal Mehta</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/cordial_tablet</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>


