<?xml version="1.0"?>
<package format="2">
  <name>harmoni_common_msgs</name>
  <version>0.0.0</version>
  <description>The harmoni_common_msgs package</description>
  <maintainer email="cbirming@usc.edu">Chris Birmingham</maintainer>


  <license>MIT</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/harmoni_actuator</url> -->

  <author email="cbirming@usc.edu">Chris Birmingham</author>
  <author email="rmswan@usc.edu ">Michael Swan</author>
  <author email="micol.spitale@polimi.it ">Micol Spitale</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


</package>
