<?xml version="1.0.0"?>
<package format="2">
  <name>harmoni_hass</name>
  <version>0.0.0</version>
  <description>The harmoni_hass package</description>
  <maintainer email="eleonora.toscano@mail.polimi.it">Eleonora Toscano</maintainer>


  <license>MIT</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/harmoni_actuator</url> -->
  <author email="eleonora.toscano@mail.polimi.it">Eleonora Toscano</author>
 <!-- <author email="cbirming@usc.edu">Chris Birmingham</author>
  <author email="rmswan@usc.edu ">Michael Swan</author>
  <author email="micol.spitale@polimi.it ">Micol Spitale</author-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
