<?xml version="1.0"?>
<package format="2">
  <name>harmoni_web</name>
  <version>0.0.0</version>
  <description>The harmoni_web package</description>
  <maintainer email="cbirming@usc.edu">Chris Birmingham</maintainer>


  <license>MIT</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/harmoni_actuator</url> -->

  <author email="cbirming@usc.edu">Chris Birmingham</author>
<!--author email="rmswan@usc.edu ">Michael Swan</author>
  <author email="micol.spitale@polimi.it ">Micol Spitale</author-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


</package>
